fix: update dark theme background and sidebar color for improved contrast

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,7 +75,7 @@
   --sidebar-ring: oklch(0.707 0.022 261.325);
 }
 .dark {
-  --background: oklch(16.842% 0.00002 271.152);
+  --background: oklch(26.507% 0.00759 274.662);
   --foreground: oklch(0.985 0.002 247.839);
   --card: oklch(0.21 0.034 264.665);
   --card-foreground: oklch(0.985 0.002 247.839);
@@ -98,7 +98,7 @@
   --chart-3: oklch(0.769 0.188 70.08);
   --chart-4: oklch(0.627 0.265 303.9);
   --chart-5: oklch(0.645 0.246 16.439);
-  --sidebar: oklch(0.21 0.034 264.665);
+  --sidebar: oklch(17.423% 0.00165 16.654);
   --sidebar-foreground: oklch(0.985 0.002 247.839);
   --sidebar-primary: oklch(0.488 0.243 264.376);
   --sidebar-primary-foreground: oklch(0.985 0.002 247.839);
